# exist-web

./: .gitignore  .gitmodules  README.md  pyproject.toml  render.yaml
backend/: main.py  schemas.py  serializers.py  session.py
backend/tests/: test_api.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Board.tsx  SidePanel.tsx
frontend/src/lib/: api.ts  types.ts
