[project]
name = "exist-web"
version = "0.1.0"
description = "Web frontend for the Exist board game built on the CynMeith engine."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    # cynmeith is installed separately via `pip install -e ./CynMeith`
    # (editable install exposes both the cynmeith package and examples/)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
pythonpath = ["."]
